[package]
name = "reqwest_cookie_store"
version = "0.8.0" # managed by release.sh
authors = ["Patrick Fernie <patrick.fernie@gmail.com>"]
edition = "2018"
description = "A simple crate providing an implementation of the `reqwest::cookie::CookieStore` trait for `cookie_store::CookieStore`"
readme = "README.md"
repository = "https://github.com/pfernie/reqwest_cookie_store"
documentation = "https://docs.rs/reqwest_cookie_store"
license = "MIT/Apache-2.0"  # https://spdx.org/licenses/
keywords = ["cookie", "jar", "store", "http", "reqwest"]  # free text
categories = ["web-programming::http-client", "web-programming"]  # https://crates.io/category_slugs
# https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
serde = ["dep:serde" , "dep:serde_derive"]

[dependencies]
bytes = "1.0.1"
cookie_store = "^0.21"
reqwest = { version = "^0.12", default-features = false, features = ["cookies"] }
url = "2.2.2"
serde = {version = "1.0.147",  optional = true}
serde_derive = {version = "1.0.147" , optional = true }

[dev-dependencies]
tokio-test = "0.4.1"
# if `no_run` directive is removed from `lib.rs` doctest, enable the TLS feature in `reqwest`
#reqwest = { version = "^0.11", default-features = false, features = ["cookies", "default-tls"] }
